Fix bad footer on IE 11

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,8 @@ html {
 }
 
 #content {
-  flex: 1;
+  flex: 1 0 0;
+  -ms-flex: 1 0 0;
   margin-top: auto;
 }
 
@@ -51,6 +52,7 @@ a {
 #footer {
   background-color: #f8f8f8;
   flex-shrink: 0;
+  -ms-flex-negative: 0;
   margin-top: 1em;
   border-top: 1px solid #ccc;
   color: #555;
